--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,24 @@
     </div>
 
     <script>
-        document.getElementById('shorten-form').addEventListener('submit',(event)=>{
+        const fetchShortenedURL=async()=>{
+            const response =await fetch("/links");
+            const links=await response.json();
+            console.log("links",links);
+
+            const list =document.getElementById('shortened-urls');
+            list.innerHTML="";
+
+            for (const[shortCode,url] of Object.entries(links)){
+                const li= document.createElement('li');
+                li.innerHTML=`<a href="/${shortCode}" target="_blank">${window.location.origin}/${shortCode}</a> - ${url}`;
+                list.appendChild(li)
+                console.log(`${shortCode}:${url}`);
+            }
+        }
+
+
+        document.getElementById('shorten-form').addEventListener('submit',async(event)=>{
             event.preventDefault();
 
             const formData=new FormData(event.target);
@@ -36,7 +53,31 @@
 
             console.log(url,shortCode);
 
+            try{
+                const response=await fetch("/shorten",{
+                    method:"POST",
+                    headers:{"Content-Type":"application/json"},
+                    body:JSON.stringify({url,shortCode})
+                });
+
+                if(response.ok){
+                    fetchShortenedURL();
+                    alert("Form submitted successfully");
+                    event.target.reset();
+                }
+                else{
+                    const errorMessage =await response.text();
+                    alert(errorMessage)
+                }
+
+            
+            }catch(error){
+
+            }
+
         })
+
+        fetchShortenedURL();
     </script>
 </body>
 </html>
